# vigil

./: .gitignore  Cargo.toml  Makefile  README.MD  config.default.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
contrib/: install.sh  vigil.service
docs/: ARCHITECTURE.MD  CLEAN_ARCHITECTURE.MD
docs/examples/: ai_analyzer.rs  analyzer.rs  cargo.toml  cli.rs  collectors.rs  config.rs  error.rs  main.rs  notifier.rs  types.rs
src/: main.rs
src/application/: config.rs  mod.rs
src/application/dto/: mod.rs
src/application/services/: baseline.rs  mod.rs  monitor.rs
src/domain/: mod.rs
src/domain/entities/: alert.rs  baseline.rs  diagnostic.rs  disk.rs  journal.rs  mod.rs  process.rs  snapshot.rs
src/domain/ports/: analyzer.rs  collector.rs  mod.rs  notifier.rs  process_manager.rs  store.rs
src/domain/rules/: cpu.rs  disk.rs  duplicates.rs  mod.rs  oom.rs  orphans.rs  ram.rs  swap.rs  zombie.rs
src/domain/value_objects/: action_risk.rs  mod.rs  operation_mode.rs  severity.rs  thresholds.rs
src/infrastructure/: mod.rs
src/infrastructure/ai/: claude.rs  mod.rs  noop.rs  prompt_builder.rs
src/infrastructure/collectors/: disk_collector.rs  journal_collector.rs  mod.rs  sysinfo_collector.rs
src/infrastructure/notifications/: composite.rs  desktop.rs  log_file.rs  mod.rs  terminal.rs  webhook.rs
src/infrastructure/os/: mod.rs  (+1 more)
tests/: integration.rs
tests/fixtures/: snapshot_mcp_zombies.json  snapshot_normal.json  snapshot_oom.json  snapshot_ram_critical.json
tests/integration/: ai_test.rs  rules_test.rs  scan_test.rs
(+24 files in other folders)
