[package]
name = "vigil"
version = "0.1.0"
edition = "2021"
description = "AI-powered Linux system guardian — monitors processes, resources, and logs to prevent crashes"
license = "MIT"
authors = ["Mathieu"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# System monitoring
sysinfo = "0.32"
procfs = "0.17"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for AI providers)
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async traits
async-trait = "0.1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tabled = "0.17"
colored = "2"
nix = { version = "0.29", features = ["signal", "process"] }
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
